correcciones de bugs en mobil - correccion de una image de producto que no aparecia

--- a/productos/index.html
+++ b/productos/index.html
@@ -23,8 +23,9 @@
         <div class="container">
             <div class="row" id="tarjetas-miniaturas">
             </div>
+            
         </div>
-        <hr class="linea max-w mt-0 mb-3">
+        <hr class="linea max-w mb-3">
         <div class="container m-ms-5  py-1 pe-sm-5">
             <div class="row" id="catalogo-producto"></div>
                     <!-- Modal -->
