cambio de imagen de producto

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>La Blanca</title>
+    
+
+
 </head>
 
 <body class="body">
@@ -299,7 +302,7 @@
                         <img class="card-img-top img-fluid" src="./img/Img-Alfajores.png" alt="Alfajores de maicena">
                         <div class="card-body">
                             <h4 class="card-title nu-16 font-weight-bold">Alfajores de maicena</h4>
-                            <p class="card-text nu-16">Receta para aproximadamente 2 docenas de alfajore</p>
+                            <p class="card-text nu-16">Receta para aproximadamente 2 docenas de alfajores</p>
                             <!-- Button trigger modal -->
                             <a class="card-text nu-16 ct" data-toggle="modal" data-target="#exampleModalLong3"><small
                                     class="color">Ver receta</small></a>
@@ -338,7 +341,7 @@
                         <img class="card-img-top img-fluid" src="./img/Img-Alfajores.png" alt="Alfajores de maicena">
                         <div class="card-body">
                             <h4 class="card-title nu-16 font-weight-bold">Alfajores de maicena</h4>
-                            <p class="card-text nu-16">Receta para aproximadamente 2 docenas de alfajore</p>
+                            <p class="card-text nu-16">Receta para aproximadamente 2 docenas de alfajores</p>
                             <!-- Button trigger modal -->
                             <a class="card-text nu-16 ct" data-toggle="modal" data-target="#exampleModalLong3"><small
                                     class="color">Ver receta</small></a>
