agregado archivo cpanel

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
     <!--FOOTER-->
     <footer class="footer py-2 text-center">
         <img src="./img/Logo-La-blanca-footer2.png" alt="" srcset="">
-        <a href="https://wa.me/">
+        <a href="https://wa.me/5493513029880">
             <img class="icon-wp" src="./img/whatsapp_logo_icon_147205.svg" alt=""></a>
     </footer>
     <!--SCRYPTS-->
